# battleship

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
include/: application.hpp  display.hpp  point.hpp  ship.hpp
src/: application.cpp  display.cpp  ship.cpp
